--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
           <p>Welcome to Lathans books. This site categorizes all of the books that Lathan has read based on their subject. It is heavily inspired by the Palo Alto Security Cannon which can be found <a href="https://cybercanon.paloaltonetworks.com">here</a> </p> 
       </div>
 
+      <table>
+          <tr>
+              <th>All</th>
+              <th>Nonfiction</th>
+              <th>fiction</th>
+          </tr>
+      </table>
+
   </body>
 </html>
 test
