--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html> 
   <head>
       <title>Lathans Books</title> 
+      <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body> 
@@ -11,7 +12,7 @@
       </div>
 
       <table>
-          <tr>
+          <tr class="list">
               <th>All</th>
               <th>Nonfiction</th>
               <th>fiction</th>
