--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>  
 <html> 
   <head>
-      <title>Lathans Books</title> 
-      <link rel="stylesheet" type="text/css" href="style.css">
+      <title>Lathans Books< rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body> 
@@ -15,7 +14,7 @@
           <tr>
               <th>All</th>
               <th>Nonfiction</th>
-              <th>fiction</th>
+           fiction</th>
           </tr>
       </table>
 
