--- a/index.html
+++ b/index.html
@@ -7,17 +7,4 @@
   <body> 
       <div id="introduction">
           <h2>Welcome to Lathans books</h2>
-          <p>Welcome to Lathans books. This site categorizes all of the books that Lathan has read based on their subject. It is heavily inspired by the Palo Alto Security Cannon which can be found <a href="https://cybercanon.paloaltonetworks.com">here</a> </p> 
-      </div>
-
-      <table class="list">
-          <tr>
-              <th>All</th>
-              <th>Nonfiction</th>
-           fiction</th>
-          </tr>
-      </table>
-
-  </body>
-</html>
-test
+          <p>Welcome to Lathans books. This site categorizes all of the books that Lathan has read based on their subject. It is heavily inspired by
