--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <ul class="TopList">
-            <li>About Me</li>
+            <li><a href="./aboutme.html">About Me</a></li>
             <li>Search</li>
         </ul>
         <h1 class="topheader">Book Categories</h1>
