--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
             <li>Search</li>
         </ul>
         <h1 class="topheader">Book Categories</h1>
-        <table align="center" frame="box">
+        <table>
             <tr>
-                <th frame="box">Firstname</th>
+                <th>Firstname</th>
                 <th>Lastname</th>
                 <th>Age</th>
             </tr>
