the start of something new

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
             <li>Search</li>
         </ul>
         <h1 class="topheader">Book Categories</h1>
-        <table>
-            <tr>
-                <th>Firstname</th>
-                <th>Lastname</th>
-                <th>Age</th>
-            </tr>
-        </table>
+        <div class="row">
+            <div class="column">
+                <a href="./aboutme.html"><img src="./images.jpeg"></a>
+                <img src="./nonfiction-1-728.jpg">
+            </div>
+        </div>
     </body>
 </html>
